--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,13 +244,98 @@ body.active {
 /*-----------------------------------*\
   #HEADER
 \*-----------------------------------*/
-.navbar, .overlay {
+.overlay {
   display: none;
 }
 
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-block: 18px;
+  transition: var(--transition-2);
+  z-index: 4;
+}
 
+.header.active {
+  background-color: var(--eerie-black);
+  padding-block: 12px;
+  box-shadow: var(--shadow);
+}
 
+.header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.navbar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  background-color: var(--eerie-black);
+  height: 100vh;
+  max-width: 280px;
+  width: 100%;
+  padding: 25px;
+  overflow-y: auto;
+  z-index: 2;
+  transition: 0.25s var(--cubic-out);
+  visibility: hidden;
+}
+
+.navbar.active {
+  visibility: visible;
+  transform: traslateX(-280px);
+  transition-duration: 0.5s;
+}
+
+.navbar-top .logo .img {
+  width: 130px;
+}
+
+.nav-close-btn {
+  width: 25px;
+  height: 25px;
+}
+
+.nav-close-btn .span {
+  background-color: var(--white_a80);
+  width: 25px;
+  height: 3px;
+  border-radius: 5px;
+  transition: var(--transition-1);
+}
+
+.nav-close-btn .one { 
+  transform: rotate(45deg) translate(2px, 2px); 
+}
+
+.nav-close-btn .two { 
+  transform: rotate(-45deg); 
+}
+
+.nav-close-btn:is(:hover, :focus-visible) .span { 
+  background-color: var(--radical-red); 
+}
+
+.navbar-list {
+  text-align: center;
+  padding-block: 40px;
+}
+
+.navbar-link {
+  font-size: var(--fs-7);
+  font-weight: var(--fw-400);
+  padding-block: 2px;
+  text-transform: capitalize;
+  transition: var(--transition-1);
+}
+
+.navbar-link:is(:hover, :focus-visible) { 
+  color: var(--radical-red); 
+}
 /*-----------------------------------*\
   #HERO
 \*-----------------------------------*/
