--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,8 +193,6 @@ body.active {
 }
 
 
-
-
 /*-----------------------------------*\
   #LOADING
 \*-----------------------------------*/
@@ -244,10 +242,6 @@ body.active {
 /*-----------------------------------*\
   #HEADER
 \*-----------------------------------*/
-.overlay {
-  display: none;
-}
-
 .header {
   position: fixed;
   top: 0;
@@ -336,13 +330,89 @@ body.active {
 .navbar-link:is(:hover, :focus-visible) { 
   color: var(--radical-red); 
 }
+
+.overlay {
+  position: fixed;
+  inset: 0;
+  background-color: var(--black);
+  z-index: 1;
+  transition: var(--transition-1);
+  opacity: 0;
+  pointer-events: none;
+}
+
+.overlay.active {
+  opacity: 0.75;
+  pointer-events: all;
+}
+
 /*-----------------------------------*\
   #HERO
 \*-----------------------------------*/
+.hero {
+  padding-block-start: 120px;
+  text-align: center;
+}
 
+.hero-banner {
+  max-width: 150px;
+  margin-inline: auto;
+  margin-block-end: 20px;
+}
 
+.hero .wrapper {
+  position: relative;
+  text-align: left;
+  height: 1.2em;
+  margin-block: 10px 25px;
+}
 
+.hero .wrapper .strong {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: traslateX(-50%);
+  width: 300px;
+  font-weight: inherit;
+  display: flex;
+}
 
+.hero-text {
+  font-size: var(--fs-10);
+  font-weight: var(--fs-300);
+  text-transform: uppercase;
+  letter-spacing: 5px;
+}
+
+.hero .wrapper .space {
+  padding: 0.1em;
+}
+
+.hero .wrapper :is(.in, .out) {
+  opacity: 0;
+  transform: scaleY(0);
+}
+
+.hero .strong.active .out {
+  opacity: 1;
+  transform: scaleY(1);
+  animation: textWave 0.2s ease reverse forwards;
+}
+
+.hero .wrapper .in {
+  animation: textWave 0.2s ease forwards;
+}
+
+@keyframes textWave {
+  0% {
+    opacity: 0;
+    transform: scaleY(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scaleY(1);
+  }
+}
 
 /*-----------------------------------*\
   #GALLERY
