move header into container to fit size of images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,6 +192,11 @@ body.active {
   overflow: hidden;
 }
 
+.text-holder {
+  aspect-ratio: var(--width) / var(--height);
+  overflow: hidden;
+}
+
 .has-before {
   position: relative;
   z-index: 1;
